Fixed a bug.